# oqd-compiler-infrastructure

./: .gitignore  README.md  flake.nix  mkdocs.yaml  pyproject.toml
.github/workflows/: CI.yml  pytest.yml
docs/: api_reference.md  index.md
docs/explanation/: infrastructure.md  language.md
docs/get-started/: acknowledgement.md  installation.md
docs/reference/: base.md  dataflow.md  interface.md  lattice.md  rewriter.md  rule.md  walk.md
docs/stylesheets/: extra_admonitions.css
docs/tutorial/: calculator.ipynb  calculator.md  calculator.py  tutorial.ipynb
pkgs/: derivation.nix
src/oqd_compiler_infrastructure/: __init__.py  analysis.py  base.py  dataflow.py  interface.py  lattice.py  match.py  meta.py  rewriter.py  rule.py  walk.py
tests/: test_analysis.py  test_conversion.py  test_dataflow.py  test_lattice.py  test_rewriters.py  test_rule.py  test_verbose.py  test_walk.py
tests/examples/: advanced_rewrite.py  conversion_pass.py  dispatch_example.py  mro_example.py  multi_target_compiler.py  rewrite_example.py  simple_pass.py  symbolic_diff.py  test_simple_pass.py  trig_simplifier.py  walk_example.py
