[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd_compiler_infrastructure"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["pydantic"]

[project.optional-dependencies]
docs = [
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocstrings-python",
]
test = ["unittest_prettify"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_compiler_infrastructure*"]
